Styles: Fix share count text vertical alignment

--- a/styles/jssocials-theme-classic.scss
+++ b/styles/jssocials-theme-classic.scss
@@ -69,7 +69,7 @@ $transition: background 200ms ease-in-out !default;
     }
 
     .jssocials-share-count {
-        line-height: 2.5em;
+        line-height: 2.75em;
         color: $count-color;
         font-size: .9em;
     }
