--- a/styles/jssocials.scss
+++ b/styles/jssocials.scss
@@ -69,6 +69,7 @@ img.jssocials-share-logo {
     display: inline-block;
     height: $base-size;
     padding: 0 $base-padding;
+    line-height: 1;
     vertical-align: middle;
     cursor: default;
 
